fixed final layout issue from quxiaofeng by adding display:inline-block to article css property

--- a/css/tufte.scss
+++ b/css/tufte.scss
@@ -179,7 +179,7 @@ pre{
   margin-top: 1.4rem;
   margin-bottom: 1.4rem;
 }
-article { position: relative; }
+article { position: relative; display: inline-block;}
 
 p, li{ 
     font-size: 1.4rem;
